--- a/gimnastikos-treniruotes.html
+++ b/gimnastikos-treniruotes.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  Last Published: Wed Nov 20 2024 05:10:38 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="66ef0c3e1663e1cc0810c3fb" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
+<html data-wf-page="673c9e2cb163432516dd7cf8" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Kunu Studio - Ačiū</title>
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." name="description">
-  <meta content="Kunu Studio - Ačiū" property="og:title">
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." property="og:description">
+  <title>Gimnastikos Treniruotės</title>
+  <meta content="Gimnastikos ir lankstumo treniruotės Vilniuje. Turime suaugsiu ir vaikų grupes. Nemokamas pabandymas." name="description">
+  <meta content="Gimnastikos Treniruotės" property="og:title">
+  <meta content="Gimnastikos ir lankstumo treniruotės Vilniuje. Turime suaugsiu ir vaikų grupes. Nemokamas pabandymas." property="og:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Kunu Studio - Ačiū" property="twitter:title">
-  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje. Baleto ir siuolaikinio sokio pamokos vaikams ir suaugusiems." property="twitter:description">
+  <meta content="Gimnastikos Treniruotės" property="twitter:title">
+  <meta content="Gimnastikos ir lankstumo treniruotės Vilniuje. Turime suaugsiu ir vaikų grupes. Nemokamas pabandymas." property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -35,7 +35,7 @@
     </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://kunu.studio/aciu" rel="canonical">
+  <link href="https://kunu.studio/gimnastikos-treniruotes" rel="canonical">
   <style>
       * {
         -webkit-font-smoothing: antialiased;
@@ -59,70 +59,10 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, 'script', 'dataLayer', 'GTM-W5TVWPKP');
     </script>
-  <!--  End Google Tag Manager  --><!--  Google Tag Manager  -->
-  <script>
-      (function(w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-          'gtm.start': new Date().getTime(),
-          event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-W5TVWPKP');
-    </script>
   <!--  End Google Tag Manager  -->
 </head>
 <body class="body">
   <div class="page-wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
-      <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.8515625px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
-        <nav role="navigation" class="nav3_menu w-nav-menu">
-          <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
-            <div class="nav3_dropdown_toggle w-dropdown-toggle">
-              <div class="nav3_link">Šokio Pamokos</div>
-              <div class="nav3_dropdown_icon w-embed"><svg height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M4.42678 7.42678L7.82326 10.8232C7.92089 10.9209 8.07918 10.9209 8.17681 10.8232L11.5732 7.42678C11.7307 7.26928 11.6192 7 11.3964 7H4.60356C4.38083 7 4.26929 7.26929 4.42678 7.42678Z" fill="currentcolor"></path>
-                </svg></div>
-            </div>
-            <nav class="nav3_dropdown_list w-dropdown-list">
-              <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
-              <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
-              <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
-              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
-              <a href="sokio-terapija.html" class="nav3_link w-dropdown-link">Šokio Terapija</a>
-              <a href="gimnastikos-treniruotes.html" class="nav3_link w-dropdown-link">Gimnastikos Treniruotės</a>
-              <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
-              <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
-            </nav>
-          </div>
-          <a href="tvarkarastis.html" class="nav3_link w-inline-block">
-            <div>Tvarkaraštis</div>
-          </a>
-          <a href="sokiu-pamoku-kainos.html" class="nav3_link w-inline-block">
-            <div>Kainos</div>
-          </a>
-          <a href="sokiu-studijos-nuoma-vilniuje.html" class="nav3_link w-inline-block">
-            <div>Studijos Nuoma</div>
-          </a>
-          <a href="projektai.html" class="nav3_link w-inline-block">
-            <div>PRojektai</div>
-          </a>
-          <a href="kontaktai.html" class="nav3_link w-inline-block">
-            <div>Kontaktai</div>
-          </a>
-        </nav>
-        <div class="nav3_menu_button w-nav-button">
-          <div class="nav3_menu_icon w-icon-nav-menu"></div>
-        </div>
-      </div>
-    </div>
     <div class="styles w-embed">
       <style>
           /* Make text look crisper and more legible in all browsers */
@@ -295,23 +235,115 @@ a,
           }
         </style>
     </div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
+      <div class="nav3_container">
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.8515625px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <nav role="navigation" class="nav3_menu w-nav-menu">
+          <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
+            <div class="nav3_dropdown_toggle w-dropdown-toggle">
+              <div class="nav3_link">Šokio Pamokos</div>
+              <div class="nav3_dropdown_icon w-embed"><svg height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4.42678 7.42678L7.82326 10.8232C7.92089 10.9209 8.07918 10.9209 8.17681 10.8232L11.5732 7.42678C11.7307 7.26928 11.6192 7 11.3964 7H4.60356C4.38083 7 4.26929 7.26929 4.42678 7.42678Z" fill="currentcolor"></path>
+                </svg></div>
+            </div>
+            <nav class="nav3_dropdown_list w-dropdown-list">
+              <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
+              <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
+              <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
+              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
+              <a href="sokio-terapija.html" class="nav3_link w-dropdown-link">Šokio Terapija</a>
+              <a href="gimnastikos-treniruotes.html" aria-current="page" class="nav3_link w-dropdown-link w--current">Gimnastikos Treniruotės</a>
+              <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
+              <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
+            </nav>
+          </div>
+          <a href="tvarkarastis.html" class="nav3_link w-inline-block">
+            <div>Tvarkaraštis</div>
+          </a>
+          <a href="sokiu-pamoku-kainos.html" class="nav3_link w-inline-block">
+            <div>Kainos</div>
+          </a>
+          <a href="sokiu-studijos-nuoma-vilniuje.html" class="nav3_link w-inline-block">
+            <div>Studijos Nuoma</div>
+          </a>
+          <a href="projektai.html" class="nav3_link w-inline-block">
+            <div>PRojektai</div>
+          </a>
+          <a href="kontaktai.html" class="nav3_link w-inline-block">
+            <div>Kontaktai</div>
+          </a>
+        </nav>
+        <div class="nav3_menu_button w-nav-button">
+          <div class="nav3_menu_icon w-icon-nav-menu"></div>
+        </div>
+      </div>
+    </div>
     <main class="main-wrapper">
-      <section class="section_layout5">
-        <div class="layout5_component">
-          <div class="layout5_background">
-            <div class="padding-global">
-              <div class="home_box">
-                <div class="container-small">
-                  <div class="text-align-center">
-                    <h1 class="heading-style-h1 text-style-allcaps">Ačiū, Greitu Metu Susieksime!</h1>
-                    <div class="padding-bottom padding-small"></div>
-                    <div class="padding-bottom padding-medium"></div>
-                  </div>
+      <section class="section_hero-secondary">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="layout2_component">
+                <div class="layout2_content">
+                  <h1>Gimnastikos Ir Lankstumo Treniruotės</h1>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>Atraskite lankstumo, stiprybės ir gracijos pasaulį! Siūlome gimnastikos užsiėmimus tiek suaugusiems, tiek vaikams – kiekvienam pagal amžių ir lygį. <br><br>Mūsų jaukioje studijoje Vilniuje sukurta saugi aplinka, kurioje galite tobulėti, ugdyti kūno koordinaciją ir mėgautis judėjimo džiaugsmu. Prisijunkite prie mūsų bendruomenės ir atraskite gimnastiką kaip niekada anksčiau!</p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+                <div class="layout2_image-wrapper"><img src="images/image00136.jpeg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, 44vw" srcset="images/image00136-p-500.jpeg 500w, images/image00136-p-800.jpeg 800w, images/image00136-p-1080.jpeg 1080w, images/image00136.jpeg 1484w" alt="" class="layout2_image"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section_layout3">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="pamoku_grid two_rows">
+                <div class="layout3_content">
+                  <h2 class="heading">Gimnastikos ir Lankstumo Treniruotės Vaikams</h2>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="paragraph">Padėkite savo vaikui sukurti tvirtą pagrindą ateities pasiekimams! Šios treniruotės skirtoms vaikams besiruošiantiems baleto pamokoms ar siekiantiems tapti profesionaliais šokėjais. <br><br>Mūsų užsiėmimuose vaikai lavina lankstumą, kūno koordinaciją ir jėgą – visa tai būtina baletui ir šokiams. Moderni studija Vilniuje ir patyrę treneriai užtikrins, kad kiekvienas vaikas jaustųsi motyvuotas ir įkvėptas siekti savo svajonių!</p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+                <div id="w-node-_03879c4e-7e23-36a6-474a-1841d8d51f76-16dd7cf8" class="layout3_content">
+                  <h2 class="heading">Lankstumo ir Mobilumo Treniruotės Suaugusiems</h2>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="paragraph">Atraskite stipresnio ir lankstesnio kūno privalumus! Šios treniruotės skirtos suaugusiems, norintiems pagerinti lankstumą, sustiprinti raumenis ir padidinti mobilumą. Ypač tinka tiems, kurie dirba sėdimą darbą ir jaučia raumenų įtampą ar sąnarių sustingimą. <br><br>Mūsų užsiėmimai Vilniaus studijoje padės jums atrasti geresnę kūno kontrolę, atsikratyti judėjimo ribojimų ir pasijusti stipresniems nei bet kada anksčiau. Leiskite sau pajusti, ką reiškia lengvas ir laisvas judėjimas!</p>
+                  <div class="padding-bottom padding-medium"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="layout2_component align-top">
+                <div class="layout2_content">
+                  <h3>Mokytoja - Neringa Masionytė</h3>
+                  <p>Esu gimnastikos bei lankstumo trenerė. Anglijoje baigiau sporto psichologijos bakalauro studijas, šiuo metu gilinu savo žinias magistrantūros studijose sporto srityje. <br><br>Esu buvusi gimnastė, 13 metų praleidusi šioje sporto šakoje. Buvau Lietuvos rinktinės narė, Europos bei pasaulio čempionatų dalyvė. <br><br>Turiu patirties dirbant mobilumo trenerė, šiuo metu didžiausią dėmesį skiriu gimnastikos ir lankstumo treniruotėms. Mano tikslas - padėti kiekvienam atrasti asmeninį ryšį su judėjimu, padėti pažinti savo kūną ir pajausti sporte džiaugsmą bei prasmę<br></p>
+                </div>
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-11-19-at-20.54.12.jpeg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-11-19-at-20.54.12-p-500.jpeg 500w, images/Screenshot-2024-11-19-at-20.54.12.jpeg 501w" alt="" class="layout2_image image_small"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <section class="section_ctabox">
+          <div class="padding-global">
+            <div class="container-medium">
+              <div class="padding-section-large">
+                <div class="layout13_component">
+                  <div class="layout13_content-wrapper">
+                    <h2>Norite tapti mūsų studijos nariu?</h2>
+                  </div>
+                  <a href="tvarkarastis.html" class="button w-button">Tvarkaraštis ir Registracija</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
     <footer class="footer6_component">
