--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Nov 02 2024 15:25:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Nov 20 2024 05:10:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -14,8 +14,8 @@
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/kunu-studio.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/components.css" rel="stylesheet" type="text/css">
+  <link href="css/kunu-studio.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -237,7 +237,7 @@ a,
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" aria-current="page" class="nav3_logo-link w-nav-brand w--current"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" aria-current="page" class="nav3_logo-link w-nav-brand w--current"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.8515625px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -251,6 +251,8 @@ a,
               <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
               <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
               <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
+              <a href="sokio-terapija.html" class="nav3_link w-dropdown-link">Šokio Terapija</a>
+              <a href="gimnastikos-treniruotes.html" class="nav3_link w-dropdown-link">Gimnastikos Treniruotės</a>
               <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
               <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
             </nav>
@@ -386,6 +388,13 @@ a,
                     </div>
                     <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
                     <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
+                  </div>
+                  <div id="w-node-f77e0223-617c-d7b0-609e-cf319ff2539c-bf1937ba" class="team4_item">
+                    <div class="team4_image-wrapper">
+                      <a href="https://kunu.studio/mokytojai#jolitas" class="w-inline-block"><img src="images/Screenshot-2024-11-19-at-20.54.12.jpeg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 44vw, (max-width: 991px) 250.5px, 21vw" srcset="images/Screenshot-2024-11-19-at-20.54.12-p-500.jpeg 500w, images/Screenshot-2024-11-19-at-20.54.12.jpeg 501w" alt="" class="team4_image"></a>
+                    </div>
+                    <div class="text-size-medium text-weight-bold">Neringa Masionytė</div>
+                    <div class="text-size-medium">Gimnastikos ir lankstumo trenerė</div>
                   </div>
                 </div>
               </div>
@@ -530,6 +539,6 @@ a,
     </footer>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66eec62f2fa59c2dc13253bb" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="js/kunu-studio.js" type="text/javascript"></script>
 </body>
 </html>
