--- a/sokio-terapija.html
+++ b/sokio-terapija.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  Last Published: Wed Nov 20 2024 05:10:38 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="670fe614ca86f59031b791f9" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
+<html data-wf-page="673ca3d0542950b8bdf3ba16" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Šiuolaikinio Šokio Pamokos</title>
-  <meta content="Šiuolaikinio šokio pamokos Vilniuje – puiki galimybė vaikams ir suaugusiems atrasti laisvą judesių kalbą bei kurti savo unikalų šokio stilių." name="description">
-  <meta content="Šiuolaikinio Šokio Pamokos" property="og:title">
-  <meta content="Šiuolaikinio šokio pamokos Vilniuje – puiki galimybė vaikams ir suaugusiems atrasti laisvą judesių kalbą bei kurti savo unikalų šokio stilių." property="og:description">
+  <title>Šokio Terapija</title>
+  <meta content="Šokio/judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." name="description">
+  <meta content="Šokio Terapija" property="og:title">
+  <meta content="Šokio/judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." property="og:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Šiuolaikinio Šokio Pamokos" property="twitter:title">
-  <meta content="Šiuolaikinio šokio pamokos Vilniuje – puiki galimybė vaikams ir suaugusiems atrasti laisvą judesių kalbą bei kurti savo unikalų šokio stilių." property="twitter:description">
+  <meta content="Šokio Terapija" property="twitter:title">
+  <meta content="Šokio/judėjimo terapija arba šokio judesio psichoterapija – tai psichoterapinis judesio ir šokio naudojimas emocinei, intelektualinei ir motorinei kūno funkcijai gerinti, nagrinėjant ryšį tarp judesio ir emocijų." property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -35,7 +35,7 @@
     </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://kunu.studio/siuolaikinio-sokio-pamokos" rel="canonical">
+  <link href="https://kunu.studio/sokio-terapija" rel="canonical">
   <style>
       * {
         -webkit-font-smoothing: antialiased;
@@ -249,9 +249,9 @@ a,
             <nav class="nav3_dropdown_list w-dropdown-list">
               <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
               <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
-              <a href="siuolaikinio-sokio-pamokos.html" aria-current="page" class="nav3_link w-dropdown-link w--current">Šiuolaikinio Šokio Pamokos</a>
+              <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
               <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
-              <a href="sokio-terapija.html" class="nav3_link w-dropdown-link">Šokio Terapija</a>
+              <a href="sokio-terapija.html" aria-current="page" class="nav3_link w-dropdown-link w--current">Šokio Terapija</a>
               <a href="gimnastikos-treniruotes.html" class="nav3_link w-dropdown-link">Gimnastikos Treniruotės</a>
               <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
               <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
@@ -285,12 +285,12 @@ a,
             <div class="padding-section-large">
               <div class="layout2_component">
                 <div class="layout2_content">
-                  <h1>Šiuolaikinio Šokio Pamokos Vilniuje</h1>
+                  <h1>Judesio ir Šokio Terapija</h1>
                   <div class="padding-bottom padding-small"></div>
-                  <p>Šiuolaikinis šokis yra žanras, kuri sunku griežtai apibrėžti, nes jis pasižymi savo sklandumu, universalumu ir išraiškos laisve. <br><br>Skirtingai nuo tradicinių šokio formų, šiuolaikinis šokis apima platų judesių spektrą, semiasi įkvėpimo iš įvairių šokio stilių, kasdienių gestų ir net improvizacijos elementų. <br><br>Jis atsirado kaip maištas prieš klasikiniam šokiui būdingus apribojimus, suteikdamas choreografams ir šokėjams platformą eksperimentams bei individualiai saviraiškai.</p>
+                  <p>Atraskite judesio meditaciją, kuri atveria kelią į gilesnį savęs pažinimą ir vidinę ramybę. Judesio ir šokio terapija tinka visiems – nepriklausomai nuo jūsų patirties ar fizinio pasirengimo lygio. <br><br>Užsiėmimai leidžia laisvai judėti, išreikšti emocijas ir atrasti ryšį tarp kūno bei proto. Tai saugi erdvė, kurioje galite atsipalaiduoti, sustiprinti emocinį atsparumą ir pasijusti lengviau tiek fiziškai, tiek emociškai. Prisijunkite ir patirkite gydančią judesio galią!<br></p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
-                <div class="layout2_image-wrapper"><img src="images/pexels-mart-production-7319708-2.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 95vw, 44vw" srcset="images/pexels-mart-production-7319708-2-p-500.jpg 500w, images/pexels-mart-production-7319708-2.jpg 640w" alt="Šiuolaikinio Šokio Pamoka" class="layout2_image"></div>
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-11-19-at-21.45.00.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, 45vw" srcset="images/Screenshot-2024-11-19-at-21.45.00-p-500.jpg 500w, images/Screenshot-2024-11-19-at-21.45.00-p-800.jpg 800w, images/Screenshot-2024-11-19-at-21.45.00-p-1080.jpg 1080w, images/Screenshot-2024-11-19-at-21.45.00.jpg 1188w" alt="" class="layout2_image"></div>
               </div>
             </div>
           </div>
@@ -302,76 +302,63 @@ a,
             <div class="padding-section-large">
               <div class="pamoku_grid two_rows">
                 <div class="layout3_content">
-                  <h2 class="heading">Šiuolaikinio Šokio Pamokos Vaikams</h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Užsiėmimų metu jaunieji šokėjai ne tik lavins savo koordinaciją ir fizinį stiprumą, bet ir ugdys vaizduotę, pasitikėjimą savimi bei komandinio darbo įgūdžius. Šokdami pagal įvairią šiuolaikinę muziką ir atlikdami žaidybinio pobūdžio pratimus, jie atras judesio džiaugsmą ir mokysis išreikšti emocijas per kūną. Pamokos pritaikytos kiekvieno vaiko gebėjimams ir skatina laisvą kūrybiškumą bei smalsumą!<br><br>Užsiemimai vyksta pirmadieniais ir trečiadieniais.</p>
+                  <h2 class="heading">Kodėl verta rinktis šokio ir judesio terapiją?</h2>
+                  <div class="padding-bottom padding-small">
+                    <div class="w-richtext">
+                      <p>Šokio ir judesio terapija yra daugiau nei tik fizinis judėjimas. Ji padeda:</p>
+                      <p>‍</p>
+                      <ul role="list">
+                        <li><strong>Sumažinti stresą ir nerimą</strong>: Laisvas judesys ir meditacija atpalaiduoja protą ir kūną.</li>
+                        <li><strong>Pagerinti fizinę būklę</strong>: Judėjimas stiprina kūną, gerina lankstumą ir laikyseną.</li>
+                        <li><strong>Ugdyti emocinį atsparumą</strong>: Judesys suteikia galimybę išreikšti užspaustas emocijas ir atrasti vidinę harmoniją.</li>
+                        <li><strong>Sustiprinti ryšį su savimi</strong>: Judesio meditacija padeda geriau suprasti savo jausmus ir poreikius.</li>
+                      </ul>
+                      <h1>‍</h1>
+                    </div>
+                  </div>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
-                <div id="w-node-_03879c4e-7e23-36a6-474a-1841d8d51f76-31b791f9" class="layout3_content">
-                  <h2 class="heading">Šiuolaikinio Šokio Pamokos Suaugusiems</h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Pamokos skirtos tiems, kurie nori geriau suprasti ir pajusti savo kūno veikimą. Šokdami pagal šiuolaikinę muziką, palaipsniui mokomės įvairių judesių, judame erdvėje ir stipriname fizinę ištvermę. Remdamiesi teatrinėmis ir šiuolaikinio šokio praktikomis, ugdome vaizduotę, išlaisviname kūrybiškumą, tobuliname koordinaciją ir stipriname emocinį intelektą.<br><br>Užsiemimai vyksta pirmadieniais ir trečiadieniais.</p>
+                <div id="w-node-_03879c4e-7e23-36a6-474a-1841d8d51f76-bdf3ba16" class="layout3_content">
+                  <h2 class="heading"><strong>Skirta ieškantiems ramybės ir laisvumo</strong></h2>
+                  <div class="padding-bottom padding-small">
+                    <div class="w-richtext">
+                      <p>Šokio ir judesio terapija yra puikus pasirinkimas, jei norite sumažinti įtampą po ilgos dienos, geriau suprasti save ar sustiprinti kūną. </p>
+                      <p>‍</p>
+                      <p>Ypač naudinga tiems, kurie dirba sėdimą darbą, jaučia fizinį sustingimą ar tiesiog ieško kūrybiško būdo pasirūpinti savo emocine ir fizine sveikata. Prisijunkite ir leiskite sau atrasti laisvą, įkvepiantį judėjimą, kuris stiprina ne tik kūną, bet ir dvasią.</p>
+                      <p>‍</p>
+                      <p>Atraskite, kaip judesys gali tapti terapija ir jūsų kelionės dalimi į geresnį gyvenimą!</p>
+                    </div>
+                  </div>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <section class="section_ctabox">
-        <div class="padding-global">
-          <div class="container-medium">
-            <div class="padding-section-large">
-              <div class="layout13_component">
-                <div class="layout13_content-wrapper">
-                  <h2>Norite tapti mūsų studijos nariu?</h2>
+        <section class="section_ctabox">
+          <div class="padding-global">
+            <div class="container-medium">
+              <div class="padding-section-large">
+                <div class="layout13_component">
+                  <div class="layout13_content-wrapper">
+                    <h2>Norite tapti mūsų studijos nariu?</h2>
+                  </div>
+                  <a href="tvarkarastis.html" class="button w-button">Tvarkaraštis ir Registracija</a>
                 </div>
-                <a href="tvarkarastis.html" class="button w-button">Tvarkaraštis ir Registracija</a>
               </div>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="section_komanda">
+        </section>
         <div class="padding-global">
           <div class="container-large">
             <div class="padding-section-large">
-              <h2>Mūsų Komanda</h2>
-              <div class="padding-bottom padding-medium"></div>
-              <div class="team4_component">
-                <div class="team4_list">
-                  <div class="team4_item">
-                    <div class="team4_image-wrapper">
-                      <a href="https://kunu.studio/mokytojai#egleu" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></a>
-                    </div>
-                    <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
-                    <div class="text-size-medium">Studijos Įkūrėja, Choreografė ir Šiuolaikinio Šokio Mokytoja</div>
-                  </div>
-                  <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937ca-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper">
-                      <a href="https://kunu.studio/mokytojai#eglek" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320.484375px, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></a>
-                    </div>
-                    <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
-                    <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
-                  </div>
-                  <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937d1-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper">
-                      <a href="https://kunu.studio/mokytojai#jolitas" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></a>
-                    </div>
-                    <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
-                    <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
-                  </div>
-                  <div id="w-node-f77e0223-617c-d7b0-609e-cf319ff2539c-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper">
-                      <a href="https://kunu.studio/mokytojai#jolitas" class="w-inline-block"><img src="images/Screenshot-2024-11-19-at-20.54.12.jpeg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 44vw, (max-width: 991px) 250.5px, 21vw" srcset="images/Screenshot-2024-11-19-at-20.54.12-p-500.jpeg 500w, images/Screenshot-2024-11-19-at-20.54.12.jpeg 501w" alt="" class="team4_image"></a>
-                    </div>
-                    <div class="text-size-medium text-weight-bold">Neringa Masionytė</div>
-                    <div class="text-size-medium">Gimnastikos ir lankstumo trenerė</div>
-                  </div>
+              <div class="layout2_component align-top">
+                <div class="layout2_content">
+                  <h3>Eglė Kraujalė<br></h3>
+                  <h4 class="heading-style-h5">Šokio Judesio Praktikos Mokytoja</h4>
+                  <p>Eglės požiūris į šokį kaip identiteto ir kūrybinės išraiškos formą išryškina kūno kaip komunikacijos priemonės svarbą. Ji pabrėžia, kad mūsų kūnai perteikia emocijas ir patirtis, kurios negali būti visiškai apibūdintos žodžiais.<br><br>Šokis tampa ne tik judesiu, bet ir istorijų, pojūčių ir nuotaikų raiška, leidžiančia geriau suprasti save ir aplinkinius. Tai kvietimas giliau pažvelgti į kūno kalbą ir jos galimybes, kurios atskleidžia daugelį sluoksnių mūsų patirties.,,Savo pamokose kviečiu atverti duris į savo kūnus ir pažinti save vis giliau. <br><br>Pamokų metu naudoju meditacijos formas, kūrybines užduotis, improvizaciją, skatinu lavinti lankstumą ir taip pat taikau terapinius metodus, kurių šiuo metu mokaus Integruoto kūno judesio terapijos institute (IBMT). Esu sukaupus 25 mętu šokio patirtį, daugiausiai jos turiu ties šiuolaikiniu šokiu, esu baigusi šokio pedagogikos studijas Vilniuje bei Portugalijoje. Vedžiau gimnastikos, oro gimnastikos, šiuolaikinio šokio pamokas vaikams ir suaugusiems.”<br></p>
                 </div>
-              </div>
-              <div class="padding-top padding-medium">
-                <a href="mokytojai.html" class="button-secondary w-button">Susipažink su mūsų mokytojais</a>
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, 45vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="layout2_image image_small"></div>
               </div>
             </div>
           </div>
@@ -409,7 +396,7 @@ a,
                   <div class="text-size-medium text-weight-bold">Šokio Pamokos</div>
                   <div class="footer1_link_list">
                     <a href="sokio-pamokos.html" class="footer1_link">Šokio Stiliai ir Pamokos</a>
-                    <a href="siuolaikinio-sokio-pamokos.html" aria-current="page" class="footer1_link w--current">Šiuolaikinio Šokio Pamokos</a>
+                    <a href="siuolaikinio-sokio-pamokos.html" class="footer1_link">Šiuolaikinio Šokio Pamokos</a>
                     <a href="baleto-pamokos.html" class="footer1_link">Baleto Pamokos</a>
                     <a href="privacios-sokio-pamokos-ir-choreografija.html" class="footer1_link">Privačios Šokio Pamokos</a>
                   </div>
