--- a/baleto-pamokos.html
+++ b/baleto-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Nov 24 2024 11:56:28 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Nov 24 2024 12:20:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="670feb693f3482d4a4db0e01" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -304,13 +304,13 @@ a,
                 <div class="layout3_content">
                   <h2 class="heading">Baleto Pamokos Vaikams</h2>
                   <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Užsiėmimų metu jaunieji šokėjai ne tik lavins savo koordinaciją ir fizinį stiprumą, bet ir ugdys vaizduotę, pasitikėjimą savimi bei komandinio darbo įgūdžius. Šokdami pagal įvairią šiuolaikinę muziką ir atlikdami žaidybinio pobūdžio pratimus, jie atras judesio džiaugsmą ir mokysis išreikšti emocijas per kūną. Pamokos pritaikytos kiekvieno vaiko gebėjimams ir skatina laisvą kūrybiškumą bei smalsumą!<br><br>Užsiėmimai vyksta pirmadieniais ir trečiadieniais.</p>
+                  <p class="paragraph">Užsiėmimų metu jaunieji šokėjai ne tik lavins savo koordinaciją ir fizinį stiprumą, bet ir ugdys vaizduotę, pasitikėjimą savimi bei komandinio darbo įgūdžius. <br><br>Šokdami pagal įvairią šiuolaikinę muziką ir atlikdami žaidybinio pobūdžio pratimus, jie atras judesio džiaugsmą ir mokysis išreikšti emocijas per kūną. Pamokos pritaikytos kiekvieno vaiko gebėjimams ir skatina laisvą kūrybiškumą bei smalsumą!<br><br>Užsiėmimai vyksta pirmadieniais ir trečiadieniais.</p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
                 <div id="w-node-_03879c4e-7e23-36a6-474a-1841d8d51f76-a4db0e01" class="layout3_content">
                   <h2 class="heading">Baleto Pamokos Suaugusiems</h2>
                   <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Pamokos skirtos tiems, kurie nori geriau suprasti ir pajusti savo kūno veikimą. Šokdami pagal šiuolaikinę muziką, palaipsniui mokomės įvairių judesių, judame erdvėje ir stipriname fizinę ištvermę. Remdamiesi teatrinėmis ir šiuolaikinio šokio praktikomis, ugdome vaizduotę, išlaisviname kūrybiškumą, tobuliname koordinaciją ir stipriname emocinį intelektą.<br><br>Užsiėmimai vyksta sekmadieniais.</p>
+                  <p class="paragraph">Pamokos skirtos tiems, kurie nori geriau suprasti ir pajusti savo kūno veikimą. Šokdami pagal šiuolaikinę muziką, palaipsniui mokomės įvairių judesių, judame erdvėje ir stipriname fizinę ištvermę. <br><br>Remdamiesi teatrinėmis ir šiuolaikinio šokio praktikomis, ugdome vaizduotę, išlaisviname kūrybiškumą, tobuliname koordinaciją ir stipriname emocinį intelektą.<br><br>Užsiėmimai vyksta sekmadieniais.</p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
               </div>
