--- a/tvarkarastis.html
+++ b/tvarkarastis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 20 2024 07:47:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Nov 24 2024 12:20:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="671a182780c059ebb289fa2d" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -286,12 +286,12 @@ a,
               <div class="text-align-center">
                 <h1>Kun/u Studio Tvarkaraštis</h1>
                 <div class="padding-bottom padding-small"></div>
-                <div><img src="images/Screenshot-2024-11-20-at-14.46.10.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 90vw, 768px" srcset="images/Screenshot-2024-11-20-at-14.46.10.jpg 500w, images/Screenshot-2024-11-20-at-14.46.10.jpg 800w, images/Screenshot-2024-11-20-at-14.46.10.jpg 1080w, images/Screenshot-2024-11-20-at-14.46.10.jpg 1600w, images/Screenshot-2024-11-20-at-14.46.10.jpg 1668w" alt=""></div>
+                <div><img src="images/Screenshot-2024-11-20-at-14.46.10.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 90vw, 768px" srcset="images/Screenshot-2024-11-20-at-14.46.10-p-500.jpg 500w, images/Screenshot-2024-11-20-at-14.46.10-p-800.jpg 800w, images/Screenshot-2024-11-20-at-14.46.10-p-1080.jpg 1080w, images/Screenshot-2024-11-20-at-14.46.10-p-1600.jpg 1600w, images/Screenshot-2024-11-20-at-14.46.10.jpg 1668w" alt=""></div>
               </div>
             </div>
             <div class="div-block">
               <a href="sokio-pamokos.html" class="button-secondary w-button">Šokių Pamokos ir Stiliai</a>
-              <a href="tvarkarastis.html" aria-current="page" class="button w-button w--current">Pamokų ir Narystės Kainos</a>
+              <a href="sokiu-pamoku-kainos.html" class="button w-button">Pamokų ir Narystės Kainos</a>
             </div>
           </div>
         </div>
